Closed Bug 389112 Opened 17 years ago Closed 17 years ago

after Alt puts focus on menu bar, Tab and Esc don't leave menu bar

Categories

(Core :: Layout, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: info, Unassigned)

References

Details

(Keywords: regression)

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a7pre) Gecko/2007072104 Minefield/3.0a7pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a7pre) Gecko/2007072104 Minefield/3.0a7pre

I drive Firefox fast from the keyboard.  In recent Minefield nightly builds I notice my keyboard focus gets stuck in the menu bar.  Here's one way to reproduce, there may be others.

Reproducible: Always

Steps to Reproduce:
1. Press Alt (only) on Windows.  Focus jumps to menu bar, highlighting File. (Good)
2. Try moving the focus from the menu bar by pressing Tab or Esc.

I reproduced in Safe mode.

Actual Results:  
Focus doesn't leave menu bar.

Expected Results:  
The focus should leave the menu bar as it does in Windows Notepad and Thunderbird 2.

I'm not aware that I'm pressing Alt on its own; I just notice that the focus is stuck on File and my usual ways of getting off stopped working.

The workaround is to use keyboard navigation to open a menu, at which point Tab and Esc do shift the focus.  Or obviously click somewhere with the mouse.

I'm not sure if this is Minefield-only or a Toolkit issue.  (I tried downloading XULRunner nightly but devmo's myapp XUL sample doesn't have any menus.)
Component: Menus → General
Product: Firefox → Core
QA Contact: menus → general
Status: UNCONFIRMED → NEW
Ever confirmed: true
This code is necessary when a menubar is active but no menu is open.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attachment #274187 - Flags: superreview?(neil)
Attachment #274187 - Flags: review?(neil)
Comment on attachment 274187 [details] [diff] [review]
indicate that the menu is closed when tab or escape is pressed

I wasn't sure I could give r+sr here but bz said it was OK.
Attachment #274187 - Flags: superreview?(neil)
Attachment #274187 - Flags: superreview+
Attachment #274187 - Flags: review?(neil)
Attachment #274187 - Flags: review+
Flags: blocking1.9?
Keywords: regression
In addition to Tab and Esc, pressing Alt a second time should also leave the menu bar (as it does in TB2).
Enn: comment 3 is right. Pressing alt a second time should have the same behavior as esc/tab.
Attachment #274187 - Flags: approval1.9?
Yes, I know the fix for that and will do that after bug 390589.
Assignee: enndeakin → nobody
Status: ASSIGNED → NEW
Component: General → Layout
QA Contact: general → layout
Comment on attachment 274187 [details] [diff] [review]
indicate that the menu is closed when tab or escape is pressed

a1.9=dbaron
Attachment #274187 - Flags: approval1.9? → approval1.9+
Blocks: 392314
Filed bug 392314 on the Alt key bug.
Status: NEW → RESOLVED
Closed: 17 years ago
Flags: blocking1.9? → in-testsuite?
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: