Bug 389112, pressing tab or escape doesn't deactivate menubar, r+sr=neil,a=dbaron